DesiNZC/main/default/objects/VehicleAssetCrbnFtprnt/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Case linked to Portfolio Company</description>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Portfolio_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vehicle Asset Carbon Footprints</relationshipLabel>
    <relationshipName>Vehicle_Asset_Carbon_Footprints</relationshipName>
    <type>Lookup</type>
</CustomField>