DesiNZC/main/default/objects/VehicleAssetCrbnFtprnt/fields/Portfolio_Company__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Asset Carbon Footprints</relationshipLabel>
    <relationshipName>Vehicle_Asset_Carbon_Footprints</relationshipName>
    <type>Lookup</type>
</CustomField>